--- a/app/globals.css
+++ b/app/globals.css
@@ -50,7 +50,6 @@
 
 @layer base {
 
-
   body {
     font-family: var(--font-body);
   }
@@ -107,6 +106,6 @@
   padding: 2em;
 }
 
-@theme {
-  --color-brandGreen: 15 76 46;
+.brandGreen {
+  background-color: #276842;
 }
